2011-06-08  Keishi Hattori  <keishi@webkit.org>

Reviewed by Kent Tamura.

    Fix range element not updating when value attribute is set with JS
    https://bugs.webkit.org/show_bug.cgi?id=61857

    Test: fast/forms/range-set-attribute.html

    * html/RangeInputType.cpp:
    (WebCore::RangeInputType::minOrMaxAttributeChanged): Changed to only sanitize the value when the dirty value flag is true.


Canonical link: https://commits.webkit.org/78349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89006 268f45cc-cd09-0410-ab3c-d52691b4dbfc